package com.ott.domain.common.enums;

public enum ActivityType {
    LOGIN,
    LOGOUT,
    MESSAGE_SENT,
    GROUP_CREATED,
    GROUP_JOINED
}
